  * Remove wireless-tools from package lists as it's not required to configure
    wireless networking.
  * Remove Alastair McKinstry and Joshua Kwan as Uploaders with many thanks
    for their past contributions.

  [ Joey Hess ]
  * The i386 root floppy has been changed to a bare gzipped cpio file,
    null-paddded to the end of the floppy. This needs rootskel-bootfloppy
    version 1.60.

 -- Frans Pop <fjp@debian.org>  Sat, 12 Apr 2008 12:26:54 +0200

debian-installer (20080227) unstable; urgency=low

  [ Martin Michlmayr ]
  * Disable the Netwinder image for now since it's too large.

 -- Frans Pop <fjp@debian.org>  Wed, 27 Feb 2008 18:22:25 +0100

debian-installer (20080224) unstable; urgency=low

  [ Steve Langasek ]
  * Drop obsolete boot args from alpha netboot images.
  * Switch alpha cdrom images from initrd to initramfs (untested, but should
    work).

  [ Joey Hess ]
  * Changes to target lenny.

  [ Frans Pop ]
  * Drop build dependency on modutils (only needed for 2.4 kernels).
  * Excluding non-us for sources.list.udeb should no longer be needed; add
    exclusion for volatile.debian.{org,net}.
  * x86: document parameters to disable ACPI and USB on F6 isolinux help screen.
  * Switch i386, amd64, sparc and s/390 to 2.6.20-1.
  * Don't include usb-discover in images as USB modules should be loaded
    automatically now.

  [ Colin Watson ]
  * Don't try to mount devfs if $(TREE)/etc/udev exists.
  * Remove apparently-stray test for /dev/tty that broke tree_umount target
    for udev builds.
  * Run the demo in the C.UTF-8 locale.
  * Correct partman-auto-recipe.txt's descriptions of the $defaultignore,
    $lvmignore, and $lvmok specifiers to include the $.

  [ Martin Michlmayr ]
  * Remove rpc images because RiscPC machines are no longer supported.
  * Remove DECstation images because these machines are no longer supported.
  * Switch mips, mipsel and arm to 2.6.20-1.
  * Cobalt: don't turn the serial console on explicitly since this will