@@ -23,6 +23,7 @@ OMIT_WIN32_LOADER=1
 # No debconf either, so no preseeding.
 PRESEED=
 EXTRAUDEBS=
+TRANSSTATUS=
 
 # Save some much needed space by compressing busybox. This is kind of a
 # trial too, if it works ok we might do this for all busybox binaries
