@@ -14,3 +14,4 @@ TYPE = bootfloppy
 OMIT_RELEASE_INFO=1
 
 EXTRAUDEBS=
+TRANSSTATUS=
