@@ -7,8 +7,9 @@ IMAGE_SIZE = $(FLOPPY_SIZE)
 
 MANIFEST-EXTRA = "network drivers, including PCMCIA and wireless"
 
-# No kernel.
+# No kernel or translation statistics.
 KERNELNAME =
+TRANSSTATUS =
 
 # HACK Alert: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
 TYPE=net_drivers
