@@ -38,7 +38,12 @@ debian-installer (2008xxxx) UNRELEASED; urgency=low
     null-paddded to the end of the floppy. This needs rootskel-bootfloppy
     version 1.60.
 
- -- Frans Pop <fjp@debian.org>  Sat, 12 Apr 2008 12:26:54 +0200
+  [ Frans Pop ]
+  * For official builds, include a file with translation status information in
+    images to allow localechooser can warn users for incomplete translations.
+    A current status file should be generated before every upload.
+
+ -- Frans Pop <fjp@debian.org>  Wed, 23 Apr 2008 01:21:42 +0200
 
 debian-installer (20080227) unstable; urgency=low
 
